--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-	"extends": ["next/core-web-vitals", "next/typescript"]
+	"extends": ["next/core-web-vitals", "next/typescript"],
+	"rules": {
+		"@next/next/no-image-element": "off",
+		"eslint-disable-next-line": "@typescript-eslint/no-explicit-any"
+	}
 }
