--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.2"
+    "vaul": "^0.9.2",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
