--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"tailwindcss-animate": "^1.0.7",
 		"ts-node": "^10.9.2",
 		"vaul": "^0.9.2",
-		"zustand": "^5.0.0-rc.2"
+		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
