--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.19.1",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -34,13 +35,16 @@
 		"prisma": "^5.19.1",
 		"qs": "^6.13.0",
 		"react": "^18",
+		"react-dadata": "^2.23.3",
 		"react-dom": "^18",
+		"react-hook-form": "^7.53.0",
 		"react-hot-toast": "^2.4.1",
 		"react-use": "^17.5.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-node": "^10.9.2",
 		"vaul": "^0.9.2",
+		"zod": "^3.23.8",
 		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
