--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"react-hook-form": "^7.53.0",
 		"react-hot-toast": "^2.4.1",
 		"react-use": "^17.5.1",
+		"resend": "^4.0.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-node": "^10.9.2",
