--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.441.0",
 		"next": "14.2.10",
+		"next-auth": "^4.24.9",
+		"nextjs-toploader": "^3.7.15",
 		"prisma": "^5.19.1",
 		"qs": "^6.13.0",
 		"react": "^18",
