--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"prisma:generate": "prisma db generate",
 		"prisma:push": "prisma db push",
 		"prisma:studio": "prisma studio",
-		"prisma:seed": "prisma db seed"
+		"prisma:seed": "prisma db seed",
+		"postinstall": "prisma generate"
 	},
 	"prisma": {
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
